src/app/components/Uncovering/Uncovering.module.css
.uncovering {
    position: relative;
    width: 100%;
    height: calc(100dvh - var(--header-heightMobile));
    overflow: hidden;
}

.uncoveringContentTextContainer {
    display: inline-flex;
    height: 100%;
    min-height: 100%;
    position: relative;
    min-width: 100%;
    display: flex;
    background-color: var(--secondary-color);
    text-align: center;
}

.uncoveringContentTextContainerBackground {
    display: flex;
    top: -85px;
    position: absolute;
    text-align: center;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    max-width: 376px;
    min-height: 267px;
    padding: 30px 20px;
    background-color: var(--primary-color);
    filter: opacity(0.75);
}

.uncoveringContentText {
    color: white;
    font-size: 18px;
    align-self: center;
    margin: 0 auto;
}

.uncoveringBackgroundImage {
    height: 45%;
    min-height: 406px;
    width: 100%;
    object-fit: cover;
}

.uncoveringContentContainer {
    width: 1243px;
    height: 485px;
    margin-top: 30px;
    display: flex;
    position: absolute;
    top: 0;
    flex-direction: column;
    background-color: var(--primary-color);
    border-radius: 25px;
}

.uncoveringContentHeader {
    height: 129px;
    width: 100%;
    display: flex;
    background-color: var(--primary-color);
}

.uncoveringContentHeaderTitle {
    margin: auto;
    font-style: italic;
    font-size: 25px;
    font-weight: 500;
    text-align: center;
    text-shadow: black 0px 0px 2px;
    background-color: #ffffff80;
    width: 100%;
    padding: 10px 0;
}

.uncoveringContentHeaderTitleBold {
    font-size: 28px;
}

@media screen and (min-width: 600px) {
    .uncovering {
        height: calc(100vh - var(--header-heightTablet));
        position: relative;
    }

    .uncoveringContentHeader {
        position: absolute;
        top: 50px;
        width: 95%;
        left: 50%;
        transform: translateX(-50%);
        background-color: unset;
    }

    .uncoveringContentHeaderTitle {
        height: 100%;
        border-radius: 25px;
        background-color: var(--secondary-color);
        filter: opacity(0.5);
    }

    .uncoveringContentHeaderTitleBold {
        font-size: 50px;
    }

    .uncoveringContentTextContainerBackground {
        top: -170px;
        min-width: 600px;
        width: 600px;
        max-width: 95%;
        min-height: 500px;
        padding: 10px 20px;
        background-color: var(--primary-color);
        filter: opacity(0.75);
        border-radius: 25px;

    }

    .uncoveringContentText {
        font-size: 30px;
    }

}

